Ajustes de dependências
corrigido problemas e dependências com asert na classe de testes.